Fix Bubble Distortion
Adding object-fit in the background.css to stop the bubbles from getting smushed when the tab is minimized.

--- a/css/background.css
+++ b/css/background.css
@@ -65,6 +65,7 @@ body {
     animation: move-up 15s linear infinite;
     z-index: -1;
     opacity: 0.3;
+    object-fit: contain;
 }
 
 .one-bubble-image {
@@ -76,6 +77,7 @@ body {
     animation: move-up-fast 10s linear infinite;
     z-index: -1;
     opacity: 0.3;
+    object-fit: contain;
 }
 
 .bubbles-image-2 {
@@ -87,6 +89,7 @@ body {
     animation: move-up 12s linear infinite;
     z-index: -1;
     opacity: 0.3;
+    object-fit: contain;
 }
 
 .one-bubble-image-2 {
@@ -98,6 +101,7 @@ body {
     animation: move-up-fast 8s linear infinite;
     z-index: -1;
     opacity: 0.3;
+    object-fit: contain;
 }
 
 .bubbles-image-3 {
@@ -109,6 +113,7 @@ body {
     animation: move-up 10s linear infinite;
     z-index: -1;
     opacity: 0.3;
+    object-fit: contain;
 }
 
 @keyframes move-up {
